--- a/kubernetes/apps/network/echo-server/app/helmrelease.yaml
+++ b/kubernetes/apps/network/echo-server/app/helmrelease.yaml
@@ -85,6 +85,7 @@ spec:
           gethomepage.dev/enabled: "true"
           gethomepage.dev/group: "Network"
           gethomepage.dev/name: "Echo Server"
+          gethomepage.dev/icon: si-codemirror
         hosts:
           - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
