--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -58,6 +58,7 @@ spec:
             gethomepage.dev/enabled: "true"
             gethomepage.dev/group: "Network"
             gethomepage.dev/name: "Hubble UI"
+            gethomepage.dev/icon: si-cilium
     operator:
       prometheus:
         enabled: true
