--- a/kubernetes/apps/default/prowlarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/prowlarr/app/helmrelease.yaml
@@ -92,8 +92,13 @@ spec:
         annotations:
           external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
           gethomepage.dev/enabled: "true"
-          gethomepage.dev/group: "Media"
           gethomepage.dev/name: "Prowlarr"
+          gethomepage.dev/group: "Media"
+          gethomepage.dev/description: "Usenet Indexer"
+          gethomepage.dev/icon: "sh-prowlarr"
+          gethomepage.dev/widget.type: "prowlarr"
+          gethomepage.dev/widget.url: "https://prowlarr.${SECRET_DOMAIN}"
+          gethomepage.dev/widget.key: "{{PROWLARR__AUTH__APIKEY}}"
         className: internal
         hosts:
           - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
