--- a/kubernetes/apps/default/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/radarr/app/helmrelease.yaml
@@ -95,6 +95,14 @@ spec:
       app:
         annotations:
           external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
+          gethomepage.dev/enabled: "true"
+          gethomepage.dev/name: "Radarr"
+          gethomepage.dev/group: "Media"
+          gethomepage.dev/description: "Movie Downloader"
+          gethomepage.dev/icon: "sh-radarr"
+          gethomepage.dev/widget.type: "radarr"
+          gethomepage.dev/widget.url: "https://radarr.${SECRET_DOMAIN}"
+          gethomepage.dev/widget.key: "{{`{{RADARR__AUTH__APIKEY}}`}}"
         className: internal
         hosts:
           - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
