--- a/kubernetes/apps/default/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sonarr/app/helmrelease.yaml
@@ -96,8 +96,13 @@ spec:
         annotations:
           external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
           gethomepage.dev/enabled: "true"
-          gethomepage.dev/group: "Media"
           gethomepage.dev/name: "Sonarr"
+          gethomepage.dev/group: "Media"
+          gethomepage.dev/description: "TV Shows"
+          gethomepage.dev/icon: "sh-sonarr"
+          gethomepage.dev/widget.type: "sonarr"
+          gethomepage.dev/widget.url: "https://sonarr.${SECRET_DOMAIN}"
+          gethomepage.dev/widget.key: "{{`{{SONARR__AUTH__APIKEY}}`}}"
         className: internal
         hosts:
           - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
