--- a/kubernetes/apps/default/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sonarr/app/helmrelease.yaml
@@ -103,6 +103,7 @@ spec:
           gethomepage.dev/widget.type: "sonarr"
           gethomepage.dev/widget.url: "https://sonarr.${SECRET_DOMAIN}"
           gethomepage.dev/widget.key: "{{`{{SONARR__AUTH__APIKEY}}`}}"
+          gethomepage.dev/widget.enableQueue: "true"
         className: internal
         hosts:
           - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
