--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -76,57 +76,57 @@ data:
         #       url: https://unifi.${SECRET_DOMAIN}
         #       username: {{HOMEPAGE_VAR_UNIFI_USERNAME}}
         #       password: {{HOMEPAGE_VAR_UNIFI_PASSWORD}}
-    - Media:
-      - Bazarr:
-          icon: bazarr.png
-          href: https://bazarr.${SECRET_DOMAIN}
-          description: Subtitles Management
-          widget:
-            type: bazarr
-            url: http://bazarr.default.svc.cluster.local:6767
-            key: {{HOMEPAGE_VAR_BAZARR_TOKEN}}
-      - Prowlarr:
-          href: https://prowlarr.${SECRET_DOMAIN}
-          icon: prowlarr.png
-          description: Movies
-          widget:
-            type: prowlarr
-            url: http://prowlarr.default.svc.cluster.local:80
-            key: {{HOMEPAGE_VAR_PROWLARR_TOKEN}}
-      - Radarr:
-          href: https://radarr.${SECRET_DOMAIN}
-          icon: radarr.png
-          description: Movies
-          widget:
-            type: radarr
-            url: http://radarr.default.svc.cluster.local:80
-            key: {{HOMEPAGE_VAR_RADARR_TOKEN}}
-            enableQueue: true
-      - Readarr:
-          href: https://readarr.${SECRET_DOMAIN}
-          icon: readarr.png
-          description: Books
-          widget:
-            type: readarr
-            url: http://readarr.default.svc.cluster.local:8787
-            key: {{HOMEPAGE_VAR_READARR_TOKEN}}
-      - SABnzbd:
-          href: https://sabnzbd.${SECRET_DOMAIN}
-          icon: sabnzbd.png
-          description: Usenet Downloader
-          widget:
-            type: sabnzbd
-            url: http://sabnzbd.default.svc.cluster.local:80
-            key: {{HOMEPAGE_VAR_SABNZBD_TOKEN}}
-      - Sonarr:
-          href: https://sonarr.${SECRET_DOMAIN}
-          icon: sonarr.png
-          description: TV Shows
-          widget:
-            type: sonarr
-            url: http://sonarr.default.svc.cluster.local:80
-            key: {{HOMEPAGE_VAR_SONARR_TOKEN}}
-            enableQueue: true
+    # - Media:
+    #   - Bazarr:
+    #       icon: bazarr.png
+    #       href: https://bazarr.${SECRET_DOMAIN}
+    #       description: Subtitles Management
+    #       widget:
+    #         type: bazarr
+    #         url: http://bazarr.default.svc.cluster.local:6767
+    #         key: {{HOMEPAGE_VAR_BAZARR_TOKEN}}
+    #   - Prowlarr:
+    #       href: https://prowlarr.${SECRET_DOMAIN}
+    #       icon: prowlarr.png
+    #       description: Movies
+    #       widget:
+    #         type: prowlarr
+    #         url: http://prowlarr.default.svc.cluster.local:80
+    #         key: {{HOMEPAGE_VAR_PROWLARR_TOKEN}}
+    #   - Radarr:
+    #       href: https://radarr.${SECRET_DOMAIN}
+    #       icon: radarr.png
+    #       description: Movies
+    #       widget:
+    #         type: radarr
+    #         url: http://radarr.default.svc.cluster.local:80
+    #         key: {{HOMEPAGE_VAR_RADARR_TOKEN}}
+    #         enableQueue: true
+    #   - Readarr:
+    #       href: https://readarr.${SECRET_DOMAIN}
+    #       icon: readarr.png
+    #       description: Books
+    #       widget:
+    #         type: readarr
+    #         url: http://readarr.default.svc.cluster.local:8787
+    #         key: {{HOMEPAGE_VAR_READARR_TOKEN}}
+    #   - SABnzbd:
+    #       href: https://sabnzbd.${SECRET_DOMAIN}
+    #       icon: sabnzbd.png
+    #       description: Usenet Downloader
+    #       widget:
+    #         type: sabnzbd
+    #         url: http://sabnzbd.default.svc.cluster.local:80
+    #         key: {{HOMEPAGE_VAR_SABNZBD_TOKEN}}
+    #   - Sonarr:
+    #       href: https://sonarr.${SECRET_DOMAIN}
+    #       icon: sonarr.png
+    #       description: TV Shows
+    #       widget:
+    #         type: sonarr
+    #         url: http://sonarr.default.svc.cluster.local:80
+    #         key: {{HOMEPAGE_VAR_SONARR_TOKEN}}
+    #         enableQueue: true
 
     # - Games:
     #     - Create:
