--- a/kubernetes/apps/default/sabnzbd/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sabnzbd/app/helmrelease.yaml
@@ -92,13 +92,13 @@ spec:
         annotations:
           external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
           gethomepage.dev/enabled: "true"
-          gethomepage.dev/name: "SabNZBd"
+          gethomepage.dev/name: "SABnzbd"
           gethomepage.dev/group: "Media"
           gethomepage.dev/description: "Usenet Downloader"
           gethomepage.dev/icon: "sh-sabnzbd"
           gethomepage.dev/widget.type: "sabnzbd"
           gethomepage.dev/widget.url: "https://sabnzbd.${SECRET_DOMAIN}"
-          gethomepage.dev/widget.key: "{{`{{SABNZBD__API_KEY}}`}}"
+          gethomepage.dev/widget.key: "{{`{{SABNZBD__NZB_KEY}}`}}"
         className: internal
         hosts:
           - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
