Update widget keys in helmrelease.yaml files for Prowlarr, Radarr, Readarr, Sabnzbd, and Sonarr

--- a/kubernetes/apps/default/radarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/radarr/app/helmrelease.yaml
@@ -102,7 +102,7 @@ spec:
           gethomepage.dev/icon: "sh-radarr"
           gethomepage.dev/widget.type: "radarr"
           gethomepage.dev/widget.url: "https://radarr.${SECRET_DOMAIN}"
-          gethomepage.dev/widget.key: "{{`{{RADARR__AUTH__APIKEY}}`}}"
+          gethomepage.dev/widget.key: "{{`{{HOMEPAGE_VAR_RADARR_TOKEN}}`}}"
           gethomepage.dev/widget.enableQueue: "true"
         className: internal
         hosts:
