Add descriptions and update annotations for various helmrelease.yaml files

--- a/kubernetes/apps/default/hoarder/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hoarder/app/helmrelease.yaml
@@ -110,6 +110,7 @@ spec:
           gethomepage.dev/group: Home
           gethomepage.dev/name: *app
           gethomepage.dev/icon: sh-hoarder.png
+          gethomepage.dev/description: "Personal Bookmark Library"
         hosts:
           - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
