--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -56,9 +56,11 @@ spec:
           hosts: ["hubble.${SECRET_DOMAIN}"]
           annotations:
             gethomepage.dev/enabled: "true"
-            gethomepage.dev/group: "Network"
+            gethomepage.dev/group: "Observability"
             gethomepage.dev/name: "Hubble UI"
             gethomepage.dev/icon: si-cilium
+            gethomepage.dev/description: "Cilium Hubble UI"
+            gethomepage.dev/href: "https://hubble.${SECRET_DOMAIN}"
     operator:
       prometheus:
         enabled: true
