--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -254,6 +254,12 @@ spec:
       enabled: true
       annotations:
         external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
+        gethomepage.dev/enabled: "true"
+        gethomepage.dev/group: Observability
+        gethomepage.dev/name: Grafana
+        gethomepage.dev/icon: sh-grafana
+        gethomepage.dev/description: "Observability Dashboard"
+        gethomepage.dev/href: "https://grafana.${SECRET_DOMAIN}"
       ingressClassName: internal
       hosts: ["grafana.${SECRET_DOMAIN}"]
     persistence:
