--- a/kubernetes/apps/network/netalertx/app/helmrelease.yaml
+++ b/kubernetes/apps/network/netalertx/app/helmrelease.yaml
@@ -61,6 +61,12 @@ spec:
         className: internal
         annotations:
           external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
+          gethomepage.dev/enabled: "true"
+          gethomepage.dev/group: "Network"
+          gethomepage.dev/name: "NetAlertX"
+          gethomepage.dev/description: "NetAlertX is a network monitoring tool."
+          gethomepage.dev/icon: sh-netalertx
+          gethomepage.dev/href: "https://netalertx.${SECRET_DOMAIN}"
         hosts:
           - host: &host "netalertx.${SECRET_DOMAIN}"
             paths:
