--- a/kubernetes/apps/default/readarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/readarr/app/helmrelease.yaml
@@ -100,6 +100,7 @@ spec:
           gethomepage.dev/name: "Readarr"
           gethomepage.dev/group: "Media"
           gethomepage.dev/description: "Book Management"
+          gethomepage.dev/href: "https://readarr.${SECRET_DOMAIN}"
           gethomepage.dev/icon: "sh-readarr"
           gethomepage.dev/widget.type: "readarr"
           gethomepage.dev/widget.url: "https://readarr.${SECRET_DOMAIN}"
