--- a/kubernetes/apps/default/valheim/app/helmrelease.yaml
+++ b/kubernetes/apps/default/valheim/app/helmrelease.yaml
@@ -90,6 +90,7 @@ spec:
           gethomepage.dev/group: "Game Servers"
           gethomepage.dev/name: Valheim
           gethomepage.dev/description: "Viking Survival Game"
+          gethomepage.dev/href: "https://valheim.${SECRET_DOMAIN}"
           gethomepage.dev/icon: https://cdn2.steamgriddb.com/icon/a0b83c02d720415dada82e08bc09e9f3/32/256x256.png
 
         hosts:
