--- a/kubernetes/apps/default/readarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/readarr/app/helmrelease.yaml
@@ -98,8 +98,8 @@ spec:
           external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
           gethomepage.dev/enabled: "true"
           gethomepage.dev/name: "Readarr"
-          gethomepage.dev/group: "Media"
-          gethomepage.dev/description: "Book Management"
+          gethomepage.dev/group: "Downloads"
+          gethomepage.dev/description: "Book Collection Manager"
           gethomepage.dev/href: "https://readarr.${SECRET_DOMAIN}"
           gethomepage.dev/icon: "sh-readarr"
           gethomepage.dev/widget.type: "readarr"
