Update icon and layout styles in configmap.yaml for improved UI consistency

--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -222,15 +222,15 @@ data:
         style: row
         columns: 3
         icon: mdi-server
+        header: true
         Management:
           style: column
           icon: mdi-cog
         Game Servers:
           style: column
-          icon: mdi-minecraft
+          icon: mdi-space-invaders
         Downloads:
-          style: row
-          columns: 3
+          style: column
           icon: mdi-download-circle
       Calendar:
         style: column
