--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -122,7 +122,7 @@ data:
     useEqualHeights: true
     theme: dark
     background:
-      image: https://raw.githubusercontent.com/billm/moria-ops/main/docs/assets/vincentiu-solomon-ln5drpv_lml-unsplash.jpg
+      image: https://github.com/billm/moria-ops/blob/main/docs/assets/vincentiu-solomon-ln5drpv_ImI-unsplash.jpg?raw=true
       opacity: 20
     color: slate
     headerStyle: clean
@@ -132,23 +132,22 @@ data:
       showSearchSuggestions: true
       hideVisitURL: true
     layout:
-      Home:
+      Applications:
         style: row
-        columns: 5
-        icon: mdi-home-analytics
-      Media:
-        style: row
-        columns: 5
-        icon: mdi-play-circle
-      Network:
-        style: row
-        columns: 5
-        icon: mdi-network
-      Observability:
-        style: row
-        columns: 5
-        icon: mdi-chart-line
-      Services:
+        columns: 4
+        Home:
+          style: column
+          icon: mdi-home-analytics
+        Media:
+          style: column
+          icon: mdi-play-circle
+        Network:
+          style: column
+          icon: mdi-network
+        Observability:
+          style: column
+          icon: mdi-chart-line
+      Other Services:
         style: row
         columns: 3
         icon: mdi-server
