--- a/kubernetes/apps/network/echo-server/app/helmrelease.yaml
+++ b/kubernetes/apps/network/echo-server/app/helmrelease.yaml
@@ -83,6 +83,7 @@ spec:
         annotations:
           external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
           gethomepage.dev/enabled: "true"
+          gethomepage.dev/parent: Applications
           gethomepage.dev/group: Network
           gethomepage.dev/name: "Echo Server"
           gethomepage.dev/icon: si-codemirror
