eh what can I break?

--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -48,6 +48,8 @@ data:
     mode: cluster
   services.yaml: |
     - Network:
+      style: column
+      icon: mdi-network
       - Cloudflared:
           href: https://dash.cloudflare.com/
           icon: cloudflare-zero-trust.png
