--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -50,16 +50,16 @@ data:
     - Network:
       style: column
       icon: mdi-network
-      - Cloudflared:
-          href: https://dash.cloudflare.com/
-          icon: cloudflare-zero-trust.png
-          description: Cloudflared Tunnel Status
-          widget:
-            type: cloudflared
-            accountid: {{HOMEPAGE_VAR_CLOUDFLARED_ACCOUNTID}}
-            tunnelid: {{HOMEPAGE_VAR_CLOUDFLARED_TUNNELID}}
-            key: {{HOMEPAGE_VAR_CLOUDFLARED_API_TOKEN}}
-            fields: ["status"]
+      Cloudflared:
+        href: https://dash.cloudflare.com/
+        icon: cloudflare-zero-trust.png
+        description: Cloudflared Tunnel Status
+        widget:
+          type: cloudflared
+          accountid: {{HOMEPAGE_VAR_CLOUDFLARED_ACCOUNTID}}
+          tunnelid: {{HOMEPAGE_VAR_CLOUDFLARED_TUNNELID}}
+          key: {{HOMEPAGE_VAR_CLOUDFLARED_API_TOKEN}}
+          fields: ["status"]
 
   settings.yaml: |
     title: Dashboard
