--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -82,9 +82,6 @@ data:
       Media:
         style: column
         icon: mdi-play-circle
-      Network:
-        style: column
-        icon: mdi-network
       Observability:
         style: column
         icon: mdi-chart-line
@@ -94,8 +91,13 @@ data:
       Game Servers:
         style: column
         icon: mdi-space-invaders
+      Network:
+        style: row
+        columns: 5
+        icon: mdi-network
       Downloads:
-        style: column
+        style: row
+        columns: 5
         icon: mdi-download-circle
   widgets.yaml: |
     - logo:
