--- a/kubernetes/apps/default/ollama/app/helmrelease.yaml
+++ b/kubernetes/apps/default/ollama/app/helmrelease.yaml
@@ -78,6 +78,9 @@ spec:
               DATA_DIR: /data
               OLLAMA_BASE_URL: http://ollama-backend.default.svc.cluster.local:11434
               RAG_EMBEDDING_ENGINE: ollama
+            envFrom: 
+              - secretRef:
+                  name: openwebui-secret
             resources:
               requests:
                 cpu: 200m
